name:                ReflexScreenWidget
version:             0.1.0.0
synopsis:            Renders a CPU-generated image to a Canvas in realtime.
description:         Please see README.md
homepage:            http://github.com/maiavictor/ReflexScreenWidget
license:             MIT
license-file:        LICENSE
author:              Victor Hernandes silva Maia
maintainer:          srvictormaia@gmail.com
copyright:           
category:            Other
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.Dom.Widget.Screen, Reflex.Dom.Widget.Screen.Test, Reflex.Dom.AnimationFrame
  other-extensions:    ViewPatterns, TypeFamilies, TemplateHaskell, MultiParamTypeClasses, RankNTypes
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , transformers
                     , containers
                     , ghcjs-dom
                     , linear
                     , ghcjs-base
                     , vector
                     , time
                     , bytestring
  default-language:    Haskell2010

executable reflexScreenWidget
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , transformers
                     , containers
                     , ghcjs-dom
                     , linear
                     , ghcjs-base
                     , vector
                     , time
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maiavictor/ReflexScreenWidget
